Run now creates json object that front-end can use